make control-click bring up a context menu. b=340870 r=mento